kubernetes-services/additions/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "dashboard-ingress"
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.gkcluster.org
      secretName: "dashboard-secret"
  rules:
    - host: dashboard.gkcluster.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dashboard-ingress
                port:
                  number: 80
